--- a/resume.html
+++ b/resume.html
@@ -6,79 +6,112 @@
 <title>Pinterest Style Profile</title>
 
 <style>
-  /* ===== 全局设置 ===== */
   body {
     margin: 0;
     font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
     background: #faf6f3;
     color: #333;
   }
-
-  * {
-    box-sizing: border-box;
-  }
+  * { box-sizing: border-box; }
 
   .container {
-    max-width: 960px;
-    margin: 50px auto;
-    padding: 0 20px;
+    display: flex;
+    min-height: 100vh;
   }
 
-  /* ===== 头像区（Pinterest 大头像）===== */
+  /* ===== 左侧侧栏 ===== */
+  .sidebar {
+    width: 32%;
+    background: linear-gradient(
+      to bottom,
+      #d8c7df 0%,
+      #1f3c56 50%,
+      #142738 100%
+    );
+    padding: 50px 35px;
+    color: white;
+    position: relative;
+  }
+
+  /* 波浪 */
+  .wave {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+  }
+
+  /* 头像区 */
   .avatar-wrapper {
     text-align: center;
     margin-bottom: 35px;
   }
-
   .avatar {
     width: 150px;
     height: 150px;
     border-radius: 50%;
     overflow: hidden;
-    border: 8px solid white;
-    box-shadow: 0 8px 25px rgba(0,0,0,0.08);
-    margin: auto;
+    border: 5px solid rgba(255,255,255,0.6);
+    margin: 0 auto 10px;
     cursor: pointer;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
   }
-
   .avatar img {
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
+  #avatarInput { display: none; }
 
-  #avatarInput {
-    display: none;
+  .sidebar h2 {
+    font-size: 26px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 40px;
+    letter-spacing: -0.5px;
   }
 
-  /* ===== 标题区 ===== */
+  .icon-box {
+    margin-top: 20px;
+  }
+  .icon-item {
+    margin-bottom: 25px;
+  }
+  .icon-item strong {
+    display: block;
+    margin-bottom: 3px;
+  }
+  .icon-item span {
+    opacity: 0.8;
+    font-size: 14px;
+  }
+
+  /* ===== 右侧内容（Pinterest 风）===== */
+  .content {
+    width: 68%;
+    padding: 60px;
+  }
+
   h1 {
-    font-size: 38px;      /* Pinterest 大标题 */
+    font-size: 36px;
     font-weight: 700;
     letter-spacing: -0.5px;
-    margin: 10px 0 5px;
-    text-align: center;
+    margin-bottom: 8px;
     color: #2d2d2d;
   }
 
   .subtitle {
-    text-align: center;
     font-size: 16px;
-    opacity: 0.6;
+    opacity: 0.55;
     margin-bottom: 40px;
   }
 
-  /* ===== 卡片区 ===== */
-  .card {
-    background: white;
-    border-radius: 18px;
-    padding: 28px 32px;
-    margin-bottom: 28px;
-    box-shadow: 0 8px 30px rgba(0,0,0,0.05);
+  .section {
+    margin-bottom: 45px;
   }
 
-  .card-title {
-    font-size: 22px;     /* Pinterest 小标题 */
+  .section h2 {
+    font-size: 22px;
     font-weight: 600;
     margin-bottom: 15px;
     padding-left: 12px;
@@ -86,91 +119,124 @@
     color: #2d2d2d;
   }
 
-  .card ul {
-    padding-left: 20px;
+  .section p, .section li {
+    font-size: 16px;
+    line-height: 1.85;
+    margin-bottom: 10px;
   }
 
-  .card li {
-    font-size: 16px;
-    line-height: 1.85;  /* Pinterest 行高更松 */
-    margin-bottom: 10px;
+  .section ul {
+    padding-left: 20px;
   }
 
   .small {
     font-size: 14px;
-    opacity: 0.8;
+    opacity: 0.75;
+  }
+
+  @media(max-width: 900px) {
+    .container { flex-direction: column; }
+    .sidebar, .content { width: 100%; }
   }
 </style>
-
 </head>
 
 <body>
 
 <div class="container">
 
-  <!-- 头像区 -->
-  <div class="avatar-wrapper">
+  <!-- ===== 左侧栏 ===== -->
+  <div class="sidebar">
+
     <label for="avatarInput">
-      <div class="avatar">
-        <img id="avatarImg" src="https://via.placeholder.com/200" alt="头像">
+      <div class="avatar-wrapper">
+        <div class="avatar">
+          <img id="avatarImg" src="https://via.placeholder.com/200" alt="头像">
+        </div>
       </div>
     </label>
     <input type="file" id="avatarInput" accept="image/*">
+
+    <h2>你的名字<br>Your Name</h2>
+
+    <div class="icon-box">
+      <div class="icon-item">
+        <strong>📍 地址</strong>
+        <span>你的城市 / 国家</span>
+      </div>
+
+      <div class="icon-item">
+        <strong>📞 电话</strong>
+        <span>你的电话</span>
+      </div>
+
+      <div class="icon-item">
+        <strong>✉️ 邮箱</strong>
+        <span>你的邮箱地址</span>
+      </div>
+
+      <div class="icon-item">
+        <strong>🌐 网站</strong>
+        <span>你的个人网站 / GitHub</span>
+      </div>
+    </div>
+
+    <svg class="wave" viewBox="0 0 1440 200">
+      <path fill="#ffc857" d="M0,64L80,90.7C160,117,320,171,480,186.7C640,203,800,181,960,170.7C1120,160,1280,160,1360,160L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
+    </svg>
+
   </div>
 
-  <!-- 标题 -->
-  <h1>你的名字 Your Name</h1>
-  <div class="subtitle">产品经理 · 城市研究 · 创作者</div>
+  <!-- ===== 右侧内容（Pinterest 风）===== -->
+  <div class="content">
 
-  <!-- 个人简介卡片 -->
-  <div class="card">
-    <div class="card-title">关于我</div>
-    <p class="small">
-      在这里写一段更 Pinterest 风、更生活化的介绍，例如：
-      <br><br>
-      喜欢设计、城市观察、效率工具；正在通过写作和项目实践重建一个更自由的生活结构。
-      关注空间、商业、人与系统的关系，希望做一些有趣又有洞察力的事情。
-    </p>
-  </div>
+    <h1>个人简介 Profile</h1>
+    <div class="subtitle">产品、城市研究、写作者</div>
 
-  <!-- 工作经验 -->
-  <div class="card">
-    <div class="card-title">工作经历</div>
-    <ul>
-      <li>
-        <strong>公司 · 职位</strong>  
-        <div class="small">2020 - 至今</div>
-        负责……
-      </li>
-      <li>
-        <strong>公司 · 职位</strong>  
-        <div class="small">2017 - 2020</div>
-        负责……
-      </li>
-    </ul>
-  </div>
+    <div class="section">
+      <h2>关于我</h2>
+      <p class="small">
+        一段 Pinterest 风格的个人介绍，例如：  
+        喜欢设计、工具、城市与空间的关系；相信系统性思考，也喜欢感性的生活方式。
+      </p>
+    </div>
 
-  <!-- 教育 -->
-  <div class="card">
-    <div class="card-title">教育背景</div>
-    <ul>
-      <li><strong>学校名称 · 专业</strong>（2013 - 2017）</li>
-    </ul>
-  </div>
+    <div class="section">
+      <h2>工作经历</h2>
+      <ul>
+        <li>
+          <strong>公司 · 职位</strong>
+          <div class="small">2020 - 至今</div>
+          负责内容…
+        </li>
+        <li>
+          <strong>公司 · 职位</strong>
+          <div class="small">2017 - 2020</div>
+          负责内容…
+        </li>
+      </ul>
+    </div>
 
-  <!-- 技能 -->
-  <div class="card">
-    <div class="card-title">技能特长</div>
-    <ul>
-      <li>城市研究 / 空间分析</li>
-      <li>产品设计 / 信息架构</li>
-      <li>数据分析 / 写作表达</li>
-    </ul>
+    <div class="section">
+      <h2>教育背景</h2>
+      <ul>
+        <li><strong>学校名称 · 专业</strong>（2013 - 2017）</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>技能特长</h2>
+      <ul>
+        <li>产品设计</li>
+        <li>空间研究</li>
+        <li>写作表达</li>
+      </ul>
+    </div>
+
   </div>
 
 </div>
 
-<!-- ===== JS：上传头像预览 ===== -->
 <script>
   const avatarInput = document.getElementById("avatarInput");
   const avatarImg = document.getElementById("avatarImg");
@@ -178,7 +244,6 @@
   avatarInput.addEventListener("change", function () {
     const file = this.files[0];
     if (!file) return;
-
     const reader = new FileReader();
     reader.onload = e => avatarImg.src = e.target.result;
     reader.readAsDataURL(file);
