Update link to MyAPP in side menu

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <div class="close-btn" onclick="closeMenu()">×</div>
     <a href="#articles">最新文章</a>
     <a href="https://lightbonelife.blogspot.com/" target="_blank">全部文章（Blogger）</a>
-    <a href="https://andrewwoooo.github.io/1.html">我的应用-MyAPP</a>
+    <a href="https://andrewwoooo.github.io/app.html">我的应用-MyAPP</a>
     <a href="#">城市观察</a>
     <a href="https://andrewwoooo.github.io/resume.html">关于-About</a>
 </div>
