--- a/app.html
+++ b/app.html
@@ -92,14 +92,14 @@
 
   <!-- 应用网格 -->
   <div class="app-grid" id="appGrid">
-    <!-- 预留两个你自己的 HTML 应用 -->
+    <!自己的 HTML 应用 -->
     <a class="app" href="https://andrewwoooo.github.io/macfocus.html" target="_blank">
-      <div class="app-link"><img src="https://andrewwoooo.github.io/icon.png" alt="App1"></div>
+      <div class="app-link"><img src="https://andrewwoooo.github.io/icon.png" alt="Macfocus"></div>
       <div class="app-name">Macfocus</div>
     </a>
-    <a class="app" href="app2.html" target="_blank">
-      <div class="app-link"><img src="https://img.icons8.com/color/96/html-5.png" alt="App2"></div>
-      <div class="app-name">我的应用2</div>
+    <a class="app" href="https://andrewwoooo.github.io/diet.html" target="_blank">
+      <div class="app-link"><img src="https://img.icons8.com/color/96/html-5.png" alt="Diet"></div>
+      <div class="app-name">断食记录</div>
     </a>
 
     <!-- GitHub -->
