Update app link from diet.html to fasting.html

--- a/app.html
+++ b/app.html
@@ -97,7 +97,7 @@
       <div class="app-link"><img src="https://andrewwoooo.github.io/icon.png" alt="Macfocus"></div>
       <div class="app-name">Macfocus</div>
     </a>
-    <a class="app" href="https://andrewwoooo.github.io/diet.html" target="_blank">
+    <a class="app" href="https://andrewwoooo.github.io/fasting.html" target="_blank">
       <div class="app-link"><img src="https://img.icons8.com/color/96/html-5.png" alt="Diet"></div>
       <div class="app-name">断食记录</div>
     </a>
