--- a/fasting.html
+++ b/fasting.html
@@ -1,71 +1,63 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
-  <title>断食记录器</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
-  <style>
-    :root{
-      --bg:#0f172a;--panel:#111827;--border:#1f2937;--muted:#9ca3af;--text:#e5e7eb;
-      --primary:#22d3ee;--accent:#34d399;--danger:#f87171;
-    }
-    *{box-sizing:border-box}
-    body{margin:0;background:var(--bg);color:var(--text);
-      font-family:-apple-system,BlinkMacSystemFont,"PingFang SC",Arial,sans-serif;}
-    header{padding:14px;text-align:center;background:var(--panel);font-size:18px;font-weight:600}
-    main{padding:16px;display:flex;flex-direction:column;gap:16px}
-    .card{background:var(--panel);border-radius:12px;padding:16px}
-    .row{display:flex;gap:12px;justify-content:center;flex-wrap:wrap}
-    .btn{flex:1;padding:12px;border-radius:10px;border:none;font-weight:600;cursor:pointer}
-    .btn-primary{background:var(--primary);color:#0f172a}
-    .btn-accent{background:var(--accent);color:#0f172a}
-    .btn-danger{background:var(--danger);color:#0f172a}
-    label{font-size:13px;color:var(--muted);display:block;margin-top:10px}
-    input{width:100%;padding:10px;border-radius:10px;border:1px solid var(--border);
-      background:#0b1220;color:var(--text)}
-    .record{background:#0b1220;border-radius:10px;padding:10px;margin-top:8px}
-    .record strong{display:block;font-size:14px}
-    canvas{width:100%!important;height:240px!important}
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
+<title>断食记录器</title>
+<style>
+  :root{
+    --bg:#0f172a;--panel:#111827;--border:#1f2937;--muted:#9ca3af;--text:#e5e7eb;
+    --primary:#22d3ee;--accent:#34d399;--danger:#f87171;
+  }
+  body{margin:0;background:var(--bg);color:var(--text);
+    font-family:-apple-system,BlinkMacSystemFont,"PingFang SC",Arial,sans-serif;}
+  header{padding:14px;text-align:center;background:var(--panel);font-size:18px;font-weight:600}
+  main{padding:16px;display:flex;flex-direction:column;gap:16px}
+  .card{background:var(--panel);border-radius:12px;padding:16px}
+  .row{display:flex;gap:12px;justify-content:center;flex-wrap:wrap}
+  .btn{flex:1;padding:12px;border-radius:10px;border:none;font-weight:600;cursor:pointer}
+  .btn-primary{background:var(--primary);color:#0f172a}
+  .btn-accent{background:var(--accent);color:#0f172a}
+  .btn-danger{background:var(--danger);color:#0f172a}
+  label{font-size:13px;color:var(--muted);display:block;margin-top:10px}
+  input{width:100%;padding:10px;border-radius:10px;border:1px solid var(--border);
+    background:#0b1220;color:var(--text)}
+  .record{background:#0b1220;border-radius:10px;padding:10px;margin-top:8px}
+  .record strong{display:block;font-size:14px}
+</style>
 </head>
 <body>
-  <header>断食记录器</header>
-  <main>
-    <!-- 计时器 -->
-    <section class="card">
-      <div>状态：<strong id="statusText">未开始</strong></div>
-      <div>已断食：<strong id="elapsedText">00:00:00</strong></div>
-      <div class="row">
-        <button class="btn btn-primary" id="startBtn">开始</button>
-        <button class="btn btn-accent" id="endBtn" disabled>结束</button>
-        <button class="btn btn-danger" id="resetBtn">重置</button>
-      </div>
-    </section>
+<header>断食记录器</header>
+<main>
+  <!-- 倒计时 -->
+  <section class="card">
+    <div>状态：<strong id="statusText">未开始</strong></div>
+    <div>剩余时间：<strong id="countdownText">00:00:00</strong></div>
+    <div>预计结束时间：<strong id="etaText">—</strong></div>
+    <div class="row">
+      <button class="btn btn-primary" id="startBtn">开始倒计时</button>
+      <button class="btn btn-accent" id="endBtn" disabled>结束断食</button>
+      <button class="btn btn-danger" id="resetBtn">重置</button>
+    </div>
+  </section>
 
-    <!-- 输入 -->
-    <section class="card">
-      <label>目标时长（小时）</label>
-      <input id="targetHours" type="number" placeholder="例如 16">
-      <label>备注</label>
-      <input id="note" type="text" placeholder="心情、饮食、能量等">
-    </section>
+  <!-- 输入 -->
+  <section class="card">
+    <label>目标时长（小时）</label>
+    <input id="targetHours" type="number" placeholder="例如 16">
+    <label>备注</label>
+    <input id="note" type="text" placeholder="心情、遇到的情况">
+  </section>
 
-    <!-- 记录 -->
-    <section class="card">
-      <div class="row" style="justify-content:space-between">
-        <strong>记录</strong>
-        <button class="btn btn-accent" id="exportBtn">导出 CSV</button>
-      </div>
-      <div id="recordsList"></div>
-    </section>
-
-    <!-- 图表 -->
-    <section class="card">
-      <strong>断食趋势</strong>
-      <canvas id="trendChart"></canvas>
-    </section>
-  </main>
+  <!-- 记录 -->
+  <section class="card">
+    <div class="row" style="justify-content:space-between">
+      <strong>记录</strong>
+      <button class="btn btn-accent" id="exportBtn">导出 CSV</button>
+    </div>
+    <div id="recordsList"></div>
+  </section>
+</main>
 
 <script>
 const $ = sel => document.querySelector(sel);
@@ -76,13 +68,9 @@ const fmtTime = ms => {
   const sec = String(s%60).padStart(2,'0');
   return `${h}:${m}:${sec}`;
 };
-const fmtDate = ts => {
+const fmtDateTime = ts => {
   const d = new Date(ts);
-  return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}-${String(d.getDate()).padStart(2,'0')}`;
-};
-const fmtHM = ts => {
-  const d = new Date(ts);
-  return `${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`;
+  return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}-${String(d.getDate()).padStart(2,'0')} ${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`;
 };
 
 let records = JSON.parse(localStorage.getItem('fasting_records')||'[]');
@@ -99,26 +87,33 @@ function updateUI(){
   $('#statusText').textContent=running?'进行中':'未开始';
   $('#startBtn').disabled=running;
   $('#endBtn').disabled=!running;
-  $('#elapsedText').textContent=running?fmtTime(Date.now()-state.startTime):'00:00:00';
+  if(running){
+    const remaining=state.endTime-Date.now();
+    $('#countdownText').textContent=remaining>0?fmtTime(remaining):'已到期';
+    $('#etaText').textContent=fmtDateTime(state.endTime);
+  }else{
+    $('#countdownText').textContent='00:00:00';
+    $('#etaText').textContent='—';
+  }
   renderRecords();
-  renderCharts();
 }
 
 function startTimer(){
-  if(state.startTime) return;
+  const hours=Number($('#targetHours').value);
+  if(!hours||hours<=0){alert('请输入有效的目标时长');return;}
   state.startTime=Date.now();
-  state.targetHours=Number($('#targetHours').value)||null;
+  state.endTime=state.startTime+hours*3600*1000;
   state.note=$('#note').value||'';
   saveAll();
   clearInterval(timerInterval);
-  timerInterval=setInterval(()=>$('#elapsedText').textContent=fmtTime(Date.now()-state.startTime),500);
+  timerInterval=setInterval(updateUI,1000);
   updateUI();
 }
 function endTimer(){
   if(!state.startTime) return;
   const end=Date.now();
   records.unshift({
-    date:fmtDate(state.startTime),
+    date:fmtDateTime(state.startTime),
     start:state.startTime,
     end,
     durationMs:end-state.startTime,
@@ -146,29 +141,18 @@ function renderRecords(){
     const div=document.createElement('div');
     div.className='record';
     div.innerHTML=`<strong>${r.date}</strong>
-      时长：${(r.durationMs/3600000).toFixed(1)} 小时
+      总时长：${(r.durationMs/3600000).toFixed(1)} 小时
       ${r.note?'<br>备注：'+r.note:''}`;
     list.appendChild(div);
   });
 }
 
-function renderCharts(){
-  const fastingPoints=records.map(r=>({x:fmtDate(r.start),y:r.durationMs/3600000})).reverse();
-  if(window.fastingChart) window.fastingChart.destroy();
-  window.fastingChart=new Chart(document.getElementById('trendChart'),{
-    type:'line',
-    data:{labels:fastingPoints.map(p=>p.x),datasets:[{label:'断食小时',data:fastingPoints.map(p=>p.y),borderColor:'#22d3ee'}]},
-    options:{plugins:{legend:{labels:{color:'#e5e7eb'}}},scales:{x:{ticks:{color:'#9ca3af'}},y:{ticks:{color:'#9ca3af'}}}}
-  });
-}
-
 // 导出 CSV
 function exportCSV(){
-  const header=['日期','开始','结束','时长(小时)','备注'];
+  const header=['开始时间','结束时间','总时长(小时)','备注'];
   const rows=records.map(r=>[
-    r.date,
-    fmtHM(r.start),
-    fmtHM(r.end),
+    fmtDateTime(r.start),
+    fmtDateTime(r.end),
     (r.durationMs/3600000).toFixed(2),
     r.note||''
   ]);
@@ -194,7 +178,7 @@ $('#resetBtn').addEventListener('click',resetTimer);
 $('#exportBtn').addEventListener('click',exportCSV);
 
 if(state.startTime){
-  timerInterval=setInterval(()=>$('#elapsedText').textContent=fmtTime(Date.now()-state.startTime),500);
+  timerInterval=setInterval(updateUI,1000);
 }
 updateUI();
 </script>
