--- a/app.html
+++ b/app.html
@@ -98,7 +98,7 @@
       <div class="app-name">Macfocus</div>
     </a>
     <a class="app" href="https://andrewwoooo.github.io/fasting.html" target="_blank">
-      <div class="app-link"><img src="https://img.icons8.com/color/96/html-5.png" alt="Diet"></div>
+      <div class="app-link"><img src="https://andrewwoooo.github.io/fasting.png" alt="Diet"></div>
       <div class="app-name">断食记录</div>
     </a>
 
