--- a/app.html
+++ b/app.html
@@ -94,7 +94,7 @@
   <div class="app-grid" id="appGrid">
     <!自己的 HTML 应用 -->
     <a class="app" href="https://andrewwoooo.github.io/macfocus.html" target="_blank">
-      <div class="app-link"><img src="https://andrewwoooo.github.io/icon.png" alt="Macfocus"></div>
+      <div class="app-link"><img src="https://andrewwoooo.github.io/macfocus.png" alt="Macfocus"></div>
       <div class="app-name">Macfocus</div>
     </a>
     <a class="app" href="https://andrewwoooo.github.io/fasting.html" target="_blank">
