--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 这里是我的精神之地，探索、创造、思考。
             </p>
             <div class="action-buttons">
-                <a href="https://andrewwoooo.github.io/index.html" class="btn-primary">进入主页</a>
+                <a href="https://lightbonelife.blogspot.com" class="btn-primary">我的文章</a>
                 <a href="https://andrewwoooo.github.io/resume.html" class="btn-secondary">了解 WUDA</a>
             </div>
         </section>
